syntax = "proto3";

package google;

option go_package = "github.com/area/grpc-go/service";

service GoogleService {
  // Send an email with the current user email
  rpc SendEmailMe (EmailRequestMe) returns (EmailRequestMe) {}
}

message EmailRequestMe {
  string to = 1;
  // string from = 2; // Will be the user email registered
  string subject = 2;

  string body_message = 3;
}
